# fdi-projekt-1

./: .gitignore  CMakeLists.txt  readme.md
scripts/windows/: build.cmd  run.cmd
source/: camera.cpp  camera.hpp  evil_macros.hpp  export.cpp  export.hpp  main.cpp  simulation.cpp  simulation.hpp  ui.cpp  ui.hpp
source/imgui/: imconfig.h
Śmieciowy folder na 2 zadanie prog/: 2 zadanie prog.ipynb
Śmieciowy folder na 2 zadanie prog/Kod z symulatora kwantowego w latex-ie/: Untitled1.tex
